Correct link to lasagna image and change header text to standard recipe language

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Keto Lasagna</h1>
-    <img src="/recipes/keto-lasagna.jpeg" alt="keto lasagna">
+    <img src="keto-lasagna.jpeg" alt="keto lasagna">
     <p>This recipe for keto lasagna will delight your tastebuds without expanding your waistline. In fact, because of your commitment to living la vida low-carb by eating low-carb, high-fat (LCHF) dishes, you will improve your overall health and wellbeing. But before we get to the end goal, let's enjoy the steps along the way with gooey, cheesy, delicious lasagna!</p>
     <p>Credit for the recipe goes to <a href="TheBigMansWorld.com">TheBigMansWorld.com</a></p>
 
@@ -29,7 +29,7 @@
         <li>370 g ricotta</li>
         <li>170 g shredded mozzarella</li>
     </ul>
-    <h2>Steps</h2>
+    <h2>Instructions</h2>
     <ol>
         <li>Preheat the oven to 180C/350F. Line a large baking sheet with parchment paper and set aside.</li>
         <li>In a microwave safe bowl, add your cream cheese, mozzarella cheese, and parmesan cheese, and microwave in 30 second spurts, until the cheese has mostly melted. Add the eggs and whisk together, until a smooth batter remains.</li>
