Create link list to recipe pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <link rel="stylesheet" href="/recipes/lasagna.html">
+    <ul>
+        <li><a href="/recipes/lasagna.html">Keto Lasagna</a></li>
+    </ul>
 </body>
 </html>
