Add link to newly created tabbouleh recipe page

--- a/recipes/keto-tabbouleh.html
+++ b/recipes/keto-tabbouleh.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <h1>Keto Tabbouleh</h1>
-    <img src="/recipes/tabbouleh.webp" alt="tabbouleh">
+    <img src="tabbouleh.webp" alt="tabbouleh">
     <p>This is an adaptation of a favorite no-cook tabouleh recipe. Instead of the bulgur, I substitute hemp seed hearts, which I have found to be a versatile ingredient in other recipes for which I want to remove the grains. The nice bonus is that hemp seeds are rich in magnesium – important for me because I often have leg cramps on a low-carb diet if I am not mindful of electrolytes, the essential minerals your body needs for proper functioning. </p>
     <p>Enough with the yacking! Let's get to the recipe!</p>
     <h2>Ingredients</h2>
     <ul>
-        <li></li>
         <li>3 tightly packed cups (about 3 bunches) parsley leaves, chopped</li> 
         <li>1/2 cup mint leaves, chopped</li>
         <li>3 medium green onions (shallots/spring onions), white and light green parts sliced</li>
