--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="/recipes/lasagna.html">Keto Lasagna</a></li>
+        <li><a href="/recipes/keto-tabbouleh.html"></a></li>
     </ul>
 </body>
 </html>
